--- a/intro.html
+++ b/intro.html
@@ -8,7 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-
+    <meta http-equiv="refresh" content="300">
+    
     <title>The Discover Supercomputer</title>
 
     <!-- Bootstrap Core CSS -->
