beta version of kiosk

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <body>
     <!-- Full Page Image Background Carousel Header -->
     <header id="myCarousel" class="carousel slide">
+
         <!-- Indicators -->
         <ol class="carousel-indicators">
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -55,7 +56,7 @@
                 <!-- Set the third background image using inline CSS below. -->
                 <div class="fill" style="background-image:url('images/story-screenshot.png');"></div>
                 <div class="carousel-caption">
-                    <<a href="intro.html"><h2>Explore the Discover supercomputer</h2></a>
+                    <a href="intro.html"><h2>Explore the Discover supercomputer</h2></a>
                 </div>
             </div>
         </div>
