--- a/intro.html
+++ b/intro.html
@@ -8,8 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <meta http-equiv="refresh" content="300">
-    
+
     <title>The Discover Supercomputer</title>
 
     <!-- Bootstrap Core CSS -->
@@ -51,9 +50,6 @@
                     <li>
                         <a href="success-stories.html">Stories</a>
                     </li>
-                    <li>
-                        <a href="end.html">End</a>
-                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -65,13 +61,8 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h1>The Discover Supercomputer</h1>
-                <p class="lead">Timelapse video here along with info about discover</p>
-               <!-- right nav arrow-->
-               <div class="col-xs-4 col-sm-6">
-                    <a href="visuals.html"
-                        <img class="img-responsive img-hover" src="images/arrow_right.png" alt="">
-                    </a>
-                </div>
+                <!-- <p class="lead">Timelapse video here along with info about discover</p> -->
+                <iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=18Cajb4vawgQ6PHrq6efKEjCILBGTY6ArCp5DPTUfqW4&font=Default&lang=en&initial_zoom=2&height=650' width='100%' height='650' frameborder='0'></iframe>
             </div>
         </div>
         <!-- /.row -->
