--- a/success-stories.html
+++ b/success-stories.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <meta http-equiv="refresh" content="300">
+
     <title>Success Stories</title>
 
     <!-- Bootstrap Core CSS -->
@@ -50,9 +50,6 @@
                     <li>
                         <a href="success-stories.html">Stories</a>
                     </li>
-                    <li>
-                        <a href="end.html">End</a>
-                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -91,7 +88,7 @@
                     <img class="img-responsive img-hover" src="https://www.nccs.nasa.gov/sites/default/files/success_stories/image/sub-sahara-utm-zones.jpg" alt="">
                 </a>
                 <h4>
-                    <a href="http://www.nccs.nasa.gov/success_stories/sub-sahara-part1">Counting Trees and Shrubs in the Sub-Sahara Using Cloud Computing—Part 1</a>
+                    <a href="http://www.nccs.nasa.gov/success_stories/sub-sahara-part1"><br><br>Counting Trees and Shrubs in the Sub-Sahara Using Cloud Computing—Part 1</a>
                 </h4>
                 <h5>Leveraging NASA Center for Climate Simulation and commercial cloud technologies, scientists are calculating vegetation biomass and stored carbon within a coast-to-coast swath of Africa.</h5>
             </div>
@@ -102,7 +99,7 @@
             <!--story 3-->
             <div class="col-md-6 img-portfolio">
                 <a href="http://www.nccs.nasa.gov/success_stories/virtual_earth">
-                    <img class="img-responsive img-hover" src="http://placehold.it/700x400" alt="">
+                    <img class="img-responsive img-hover" src="images/earth_observe_thumb.png" alt="">
                 </a>
                 <h3>
                     <a href="http://www.nccs.nasa.gov/success_stories/virtual_earth">Virtual Earth Observing: Simulating the Globe in 1-Mile Segments</a>
@@ -111,11 +108,11 @@
             </div>
             <!--story 4-->
             <div class="col-md-6 img-portfolio">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-hover" src="http://placehold.it/700x400" alt="">
+                <a href="http://www.nccs.nasa.gov/success_stories/earth_animation">
+                    <img class="img-responsive img-hover" src="images/data_assim_thumb.jpg" alt="">
                 </a>
                 <h3>
-                    <a href="portfolio-item.html"> New Animation shows Millions of Earth Observations for Forecasting</a>
+                    <a href="http://www.nccs.nasa.gov/success_stories/earth_animation"> New Animation shows Millions of Earth Observations for Forecasting</a>
                 </h3>
                 <p>More than 5 million observations accumulate every 6 hours to drive weather forecasts run by NASA's Global Modeling and Assimilation Office at the NASA Center for Climate Simulation (NCCS).</p>
             </div>
@@ -124,7 +121,7 @@
         <hr>
 
         <!-- Pagination -->
-        <div class="row text-center">
+        <!-- <div class="row text-center">
             <div class="col-lg-12">
                 <ul class="pagination">
                     <li>
@@ -150,7 +147,7 @@
                     </li>
                 </ul>
             </div>
-        </div>
+        </div> -->
         <!-- /.row -->
 
     </div>
