--- a/visuals.html
+++ b/visuals.html
@@ -8,6 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
+    <meta http-equiv="refresh" content="300">
+    <meta http-equiv="refresh" content="300">
 
     <title>Explore NCCS Supercomputing</title>
 
