changes to visuals section to fix video on ipad

--- a/success-stories.html
+++ b/success-stories.html
@@ -102,20 +102,20 @@
                 <a href="http://www.nccs.nasa.gov/success_stories/virtual_earth">
                     <img class="img-responsive img-hover" src="images/earth_observe_thumb.png" alt="">
                 </a>
-                <h3>
+                <h4>
                     <a href="http://www.nccs.nasa.gov/success_stories/virtual_earth">Virtual Earth Observing: Simulating the Globe in 1-Mile Segments</a>
-                </h3>
-                <p>NASA Goddard Space Flight Center scientists recently completed the highest-resolution global weather simulation ever run in the U.S. at the NASA Center for Climate Simulation.</p>
+                </h4>
+                <h5>NASA Goddard Space Flight Center scientists recently completed the highest-resolution global weather simulation ever run in the U.S. at the NASA Center for Climate Simulation.</h5>
             </div>
             <!--story 4-->
             <div class="col-md-6 img-portfolio">
                 <a href="http://www.nccs.nasa.gov/success_stories/earth_animation">
                     <img class="img-responsive img-hover" src="images/data_assim_thumb.jpg" alt="">
                 </a>
-                <h3>
+                <h4>
                     <a href="http://www.nccs.nasa.gov/success_stories/earth_animation"> New Animation shows Millions of Earth Observations for Forecasting</a>
-                </h3>
-                <p>More than 5 million observations accumulate every 6 hours to drive weather forecasts run by NASA's Global Modeling and Assimilation Office at the NASA Center for Climate Simulation (NCCS).</p>
+                </h4>
+                <h5>More than 5 million observations accumulate every 6 hours to drive weather forecasts run by NASA's Global Modeling and Assimilation Office at the NASA Center for Climate Simulation (NCCS).</h5>
             </div>
         </div>
         <!-- /.row -->
