--- a/visuals2.html
+++ b/visuals2.html
@@ -63,19 +63,15 @@
         <div align="center">
             <div id = "video-large">
                 <video autoplay loop>
-                    <source src="http://www.hec.nasa.gov/news/gallery_images/CLDS_globe_PROJECT-ROTATE2-c5760_iPad.m4v" width="1024" height="452" type="video/mp4"> Your browser does not support the video tag.
+                    <source src="http://www.hec.nasa.gov/news/gallery_images/M2R12K-SO2-2000-2014_iPad.m4v" width="1024" height="452" type="video/mp4"> Your browser does not support the video tag.
                 </video>
             </div>
         </div>
 
         <div class="row">
             <div class="col-lg-12">
-                <h2>Clouds</h2>
-                <p><h5>Global clouds are depicted by outgoing solar radiation (left) and outgoing longwave radiation (right) from 1m/1.5km. Credits: William Putman, NASA/GMAO.<a href="visuals2.html"> View Next Visual</a></h5></p>
-
-<!--                 <div align="right">
-                    <p><a href="visuals2.html"> View Next Visual</a>
-                </div> -->
+                <h2>Volcanoes</h2>
+                <p><h5>Volcanoes worldwide over the period Jan. 2000 to Aug. 2014. Credits: William Putman, NASA/GMAO.<a href="visuals3.html"> View Next Visual</a></h5></p>
             </div>
         </div>
     </div>
