--- a/visuals3.html
+++ b/visuals3.html
@@ -63,19 +63,15 @@
         <div align="center">
             <div id = "video-large">
                 <video autoplay loop>
-                    <source src="http://www.hec.nasa.gov/news/gallery_images/CLDS_globe_PROJECT-ROTATE2-c5760_iPad.m4v" width="1024" height="452" type="video/mp4"> Your browser does not support the video tag.
+                    <source src="http://portal.nccs.nasa.gov/datashare/g6dev/MOVIES_SC16/temp_anom-global-Ops6KM_R-1080p.mp4" width="1024" height="452" type="video/mp4"> Your browser does not support the video tag.
                 </video>
             </div>
         </div>
 
         <div class="row">
             <div class="col-lg-12">
-                <h2>Clouds</h2>
-                <p><h5>Global clouds are depicted by outgoing solar radiation (left) and outgoing longwave radiation (right) from 1m/1.5km. Credits: William Putman, NASA/GMAO.<a href="visuals2.html"> View Next Visual</a></h5></p>
-
-<!--                 <div align="right">
-                    <p><a href="visuals2.html"> View Next Visual</a>
-                </div> -->
+                <h2>Temperature Anomalies</h2>
+                <p><h5>30-day running air temperature anomalies from the 1980-2010 climatology of MERRA-2 for the period from February through October 2016. The high resolution of this analysis allows us to see the details of record warmth that spread across the globe in 2016. Credits: William Putman, NASA/GMAO.<a href="visuals4.html"> View Next Visual</a></h5></p>
             </div>
         </div>
     </div>
