--- a/visuals5.html
+++ b/visuals5.html
@@ -63,19 +63,15 @@
         <div align="center">
             <div id = "video-large">
                 <video autoplay loop>
-                    <source src="http://www.hec.nasa.gov/news/gallery_images/CLDS_globe_PROJECT-ROTATE2-c5760_iPad.m4v" width="1024" height="452" type="video/mp4"> Your browser does not support the video tag.
+                    <source src="http://svs.gsfc.nasa.gov/vis/a030000/a030600/a030640/geos_cosc_720p.mp4" width="1024" height="452" type="video/mp4"> Your browser does not support the video tag.
                 </video>
             </div>
         </div>
 
         <div class="row">
             <div class="col-lg-12">
-                <h2>Clouds</h2>
-                <p><h5>Global clouds are depicted by outgoing solar radiation (left) and outgoing longwave radiation (right) from 1m/1.5km. Credits: William Putman, NASA/GMAO.<a href="visuals2.html"> View Next Visual</a></h5></p>
-
-<!--                 <div align="right">
-                    <p><a href="visuals2.html"> View Next Visual</a>
-                </div> -->
+                <h2>Carbon Monoxide</h2>
+                <p><h5>Carbon monoxide concentrations at Earth’s surface from December 1-31, 2006. The CO seen here primarily comes from fires burning in South America and Africa, and industrial activities taking place in urban areas such as Europe, Asia, and the United States. Credits: William Putman, NASA/GMAO<a href="visuals6.html"> View Next Visual</a></h5></p>
             </div>
         </div>
     </div>
