--- a/visuals4.html
+++ b/visuals4.html
@@ -63,19 +63,15 @@
         <div align="center">
             <div id = "video-large">
                 <video autoplay loop>
-                    <source src="http://www.hec.nasa.gov/news/gallery_images/CLDS_globe_PROJECT-ROTATE2-c5760_iPad.m4v" width="1024" height="452" type="video/mp4"> Your browser does not support the video tag.
+                    <source src="http://portal.nccs.nasa.gov/datashare/g6dev/MOVIES_SC16/co2-globe-Ops6KM_R-1080p.mp4" width="1024" height="452" type="video/mp4"> Your browser does not support the video tag.
                 </video>
             </div>
         </div>
 
         <div class="row">
             <div class="col-lg-12">
-                <h2>Clouds</h2>
-                <p><h5>Global clouds are depicted by outgoing solar radiation (left) and outgoing longwave radiation (right) from 1m/1.5km. Credits: William Putman, NASA/GMAO.<a href="visuals2.html"> View Next Visual</a></h5></p>
-
-<!--                 <div align="right">
-                    <p><a href="visuals2.html"> View Next Visual</a>
-                </div> -->
+                <h2>Carbon Dioxide</h2>
+                <p><h5>Global CO2 concentrations from May through Oct. 2016. In May, CO2 levels reached a global record high exceeding 404 parts per million. 2016 marks the first year where global CO2 concentrations will not drop below 400 PPM, a mark that will not be reached again without a dramatic reduction in global CO2 emissions. Credits: William Putman, NASA/GMAO.<a href="visuals5.html"> View Next Visual</a></h5></p>
             </div>
         </div>
     </div>
