embed method for explore and image in index

--- a/explore.html
+++ b/explore.html
@@ -58,8 +58,10 @@
         <!-- /.container -->
     </nav>
     <!-- Embeded job monitor from hec site -->
-    <embed src="http://www.nccs.nasa.gov/jobmon/" style="width:100%; height: 100%;">
-    <!-- /.container -->
+    <!-- <embed src="http://www.nccs.nasa.gov/jobmon/" style="width:100%; height: 100%;"> -->
+
+    <iframe src= "http://www.nccs.nasa.gov/jobmon/" style="width:100%; height: 100%; border-width:0px" > </iframe>
+
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
     <!-- Bootstrap Core JavaScript -->
