--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </div>
             <div class="item">
                 <!-- Set the third background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('images/story-screenshot.png');"></div>
+                <div class="fill" style="background-image:url('http://www.nccs.nasa.gov/sites/default/images/lori_data_exploration.jpg');"></div>
                 <div class="carousel-caption">
                     <a href="intro.html"><h2>Explore the Discover supercomputer</h2></a>
                 </div>
