--- a/visuals2.html
+++ b/visuals2.html
@@ -42,7 +42,7 @@
                         <a href="intro.html">Intro</a>
                     </li>
                     <li>
-                       <a href="explore.html">Explore</a>
+                       <a href="http://www.nccs.nasa.gov/jobmon/">Explore</a>
                     </li>
                     <li>
                         <a href="visuals.html">Visuals</a>
