--- a/visuals.html
+++ b/visuals.html
@@ -71,7 +71,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <h2>Clouds</h2>
-                <p><h5>Global clouds are depicted by outgoing solar radiation (left) and outgoing longwave radiation (right) from 1m/1.5km. Credits: William Putman, NASA/GMAO.<a href="visuals2.html"> View Next Visual</a></h5></p>
+                <p><h5>Global clouds are depicted by outgoing solar radiation (left) and outgoing longwave radiation (right) from 1 mile/1.5km. Credits: William Putman, NASA/GMAO.<a href="visuals2.html"> View Next Visual</a></h5></p>
 
 <!--                 <div align="right">
                     <p><a href="visuals2.html"> View Next Visual</a>
