--- a/visuals6.html
+++ b/visuals6.html
@@ -71,7 +71,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <h2>Wind Speeds</h2>
-                <p><h5>500 mb wind speeds at 7-kilometer resolution from August 1 to November 30, 2006, ranging from 0 to 135 knots (0 to 155 mph). Credits: William Putman, NASA/GMAO.<a href="visuals.html"> Go back to first visual</a></h5></p>
+                <p><h5>500 mb wind speeds at 7-kilometer resolution from August 1 to November 30, 2006, ranging from 0 to 135 knots (0 to 155 mph). Credits: William Putman, NASA/GMAO.<a href="visuals.html"> Go Back to First Visual</a></h5></p>
             </div>
         </div>
     </div>
