--- a/index.html
+++ b/index.html
@@ -43,14 +43,15 @@
                 </video>
                 </div>
                 <div class="carousel-caption">
-                    <a href="intro.html"><h2>Explore the Discover supercomputer</h2></a>
+                    <a href="intro.html"><h2>Click here to Explore the Discover supercomputer</h2></a>
                 </div>
             </div>
             <div class="item">
                 <!-- Set the second background image using inline CSS below. -->
                 <div class="fill" style="background-image:url('https://www.nccs.nasa.gov/sites/default/files/success_stories/image/IMG_2872.JPG');"></div>
                 <div class="carousel-caption">
-                    <a href="intro.html"><h2>Explore the Discover supercomputer</h2></a>
+                    <!--<a href="intro.html"><h2>Explore the Discover supercomputer</h2></a>-->
+                    <a href="intro.html" class="button">Explore the Discover supercomputer</a>
                 </div>
             </div>
             <div class="item">
