update to index.html buttons on all slides

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </video>
                 </div>
                 <div class="carousel-caption">
-                    <a href="intro.html"><h2>Click here to Explore the Discover supercomputer</h2></a>
+                    <a href="intro.html" class="button">Explore the Discover supercomputer</a>
                 </div>
             </div>
             <div class="item">
@@ -58,7 +58,7 @@
                 <!-- Set the third background image using inline CSS below. -->
                 <div class="fill" style="background-image:url('http://www.nccs.nasa.gov/sites/default/images/lori_data_exploration.jpg');"></div>
                 <div class="carousel-caption">
-                    <a href="intro.html"><h2>Explore the Discover supercomputer</h2></a>
+                    <a href="intro.html" class="button">Explore the Discover supercomputer</a>
                 </div>
             </div>
         </div>
