--- a/intro.html
+++ b/intro.html
@@ -1,5 +1,6 @@
 <!-- Page development and design by Naema Ahmed (@NaemaAhmed) -->
 <!-- Intro page: time lapse video and description -->
+<!-- Timeline created with Knight Lab - Google sheet - https://docs.google.com/spreadsheets/d/18Cajb4vawgQ6PHrq6efKEjCILBGTY6ArCp5DPTUfqW4/edit#gid=0 -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
